samples/_failures_safe/1761797650_26157e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_980a2e9b.c: In function ‘tokenize_string’:
./samples/SAFE/__tmp_980a2e9b.c:170:13: error: expected declaration or statement at end of input
  170 |             token.type = TOKEN_OPERATOR;
      |             ^~~~~
./samples/SAFE/__tmp_980a2e9b.c:170:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_980a2e9b.c:170:13: error: expected declaration or statement at end of input
